Timeline edit + photo

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bienvenue dans mon portfolio personnel!</title>
     <link rel="stylesheet" href="css/style.css?v=1.0">
-    <link rel="stylesheet" href="./css/smartphone.css?v=1.0.1">
+    <link rel="stylesheet" href="./css/smartphone.css?v=1.0.2">
     <script src="./js/jquery.min.js"></script>
     <script src="./js/main.js"></script>
 </head>
@@ -240,7 +240,8 @@
                                 <p class="project-description">Conception et réalisation d'une application</p>
                                 <p class="project-description"> de programmation et archivage des vols</p>
                                 <p class="project-info">Technologies: </p>
-                                <p class="project-technologies">Symfony2.8/MongoDB/Bootstrap3</p>
+                                <p class="project-technologies">Symfony2.8/MongoDB</p>
+                                <p class="project-technologies">Bootstrap3</p>
                         </div>
                         <div class="project-line-icon-left">
                                 <div class="round-endline"></div>
@@ -271,7 +272,8 @@
                                 <p class="project-description">Conception et réalisation d'une application</p>
                                 <p class="project-description"> Pour les rondanneurs (Web, Desktop, Mobile)</p>
                                 <p class="project-info">Technologies: </p>
-                                <p class="project-technologies">Symfony 3/MySQL/JavaFX/Codename1</p>
+                                <p class="project-technologies">Symfony 3/MySQL</p>
+                                <p class="project-technologies">JavaFX/Codename1</p>
                             </div>
                         <div class="project-line-icon-left">
                             <div class="round-endline"></div>
